success şablon değişiklikleri

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+      </style>
   </head>
 
   <body>
