--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
       </style>
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap');
+        </style>
   </head>
 
   <body>
